# code-dojo-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: contracts.md
docs/assets/: README.md
prometheus/: prometheus.yml
services/api-gateway/: .env.example  Dockerfile  pom.xml
services/coach-agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/coach-agent/app/: __init__.py  config.py  main.py  repository.py  schemas.py
services/coach-agent/app/agent/: loop.py
services/coach-agent/app/llm/: gemini_client.py
services/coach-agent/app/monitoring/: metrics.py
services/coach-agent/app/routers/: __init__.py  submissions.py
services/coach-agent/app/tools/: __init__.py  analyze_code.py  best_practices.py  explain_concept.py  generate_example.py  registry.py
services/coach-agent/tests/: __init__.py  test_agent_loop.py  test_coach.db  test_endpoints.py  test_gemini_client.py  test_schemas.py  test_tools.py
services/ml-analyzer/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/ml-analyzer/app/: main.py
services/ml-analyzer/app/models/: embedder.py  registry.py  reviewer.py  summarizer.py
services/ml-analyzer/app/monitoring/: metrics.py
services/ml-analyzer/app/pipelines/: preprocessing.py
services/ml-analyzer/app/routers/: analyze.py  models.py
services/ml-analyzer/tests/: test_endpoints.py  test_preprocessing.py  test_registry.py
services/web-ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  (+3 more)
(+44 files in other folders)
