[project]
name = "ml-analyzer"
version = "0.1.0"
description = "Code analysis using Hugging Face models"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "protobuf>=5.29.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
